--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <li>Programming Languages: Python, Java, JavaScript</li>
         <li>Frameworks: Flask</li>
         <li>Technologies: Bitcoin Lightning Network, APIs, I.A</li>
-        <li>Tools: Git, Android Studios, PyCharm</li>
-		<li>Operational Systems: Linux, Windows, Android</li>
+        <li>Tools: Git, Android Studios, PyCharm, ChatGPT</li>
+	<li>Operational Systems: Linux, Windows, Android</li>
       </ul>
     </section>
 
