--- a/index.html
+++ b/index.html
@@ -1,85 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"> <!-- For icons -->
-</head>
-
-<body>
-  <nav>
-    <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-
-  <header>
-    <img src="https://avatars.githubusercontent.com/ils94" alt="My Profile Picture" class="profile-picture">
-    <h1>ILS94</h1>
-    <p>Even the best insecticide can't get rid of all these bugs!</p>
-  </header>
-
-  <main>
-    <section id="about">
-      <h2>About Me</h2>
-      <p>Hobbyist software developer with a particular interest in Python, Java and blockchain technologies. I love working on projects that push the limits of what's possible whether it's building a backend for Lightning Network payments or creating tools for gaming communities. I'm always exploring new ways to make systems more efficient and innovative, and I enjoy tackling complex challenges.</p>
-    </section>
-
-    <section id="projects">
-      <h2>Featured Projects</h2>
-      <div class="project">
-        <h3>LNPay-Backend</h3>
-        <p>A simple Python backend to receive BTC through the Lightning Network using Flask and Strike API.</p>
-        <a href="https://github.com/ils94/LNPay-Backend" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project">
-        <h3>Tails OS Bitcoin Cold Wallet</h3>
-        <p>Tutorial: Creating a Bitcoin cold wallet using Tails OS with persistent storage (multilanguage).</p>
-        <a href="https://github.com/ils94/TailsOSBitcoinColdWallet" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project">
-        <h3>LOTRO To Speech</h3>
-        <p>A Python program that adds AI voice-over to Lord of The Rings Online quests using OCR.</p>
-        <a href="https://github.com/ils94/LOTROToSpeech" target="_blank">View on GitHub</a>
-      </div>
-      <div class="project">
-        <h3>LOTRO Chat Translator</h3>
-        <p>A Python program to translate chat in real-time to the desired language for Lord of the Rings Online.</p>
-        <a href="https://github.com/ils94/LOTROChatTranslator" target="_blank">View on GitHub</a>
-      </div>
-    </section>
-
-    <section id="skills">
-      <h2>Skills</h2>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <!-- For icons -->
+  </head>
+  <body>
+    <nav>
       <ul>
-        <li>Programming Languages: Python, Java, JavaScript</li>
-        <li>Frameworks: Flask</li>
-        <li>Technologies: Bitcoin Lightning Network, APIs, I.A</li>
-        <li>Tools: Git, Android Studios, PyCharm, ChatGPT</li>
-	<li>Operational Systems: Linux, Windows, Android</li>
+        <li>
+          <a href="#about">About</a>
+        </li>
+        <li>
+          <a href="#projects">Projects</a>
+        </li>
+        <li>
+          <a href="#skills">Skills</a>
+        </li>
+        <li>
+          <a href="#contact">Contact</a>
+        </li>
       </ul>
-    </section>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>Feel free to reach out if you'd like to collaborate or learn more about my work:</p>
-      <ul>
-        <li><i class="fas fa-envelope"></i> Email: <a href="mailto:github.sector155@passinbox.com">github.sector155@passinbox.com</a></li>
-        <li><i class="fab fa-github"></i> GitHub: <a href="https://github.com/ils94" target="_blank">github.com/ils94</a></li>
-      </ul>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 ils94. All rights reserved.</p>
-    <p><a href="https://github.com/ils94?tab=repositories" target="_blank">Visit My GitHub</a></p>
-  </footer>
-</body>
-
+    </nav>
+    <header>
+      <img src="https://avatars.githubusercontent.com/ils94" alt="My Profile Picture" class="profile-picture">
+      <h1>ILS94</h1>
+      <p>Even the best insecticide can't get rid of all these bugs!</p>
+    </header>
+    <main>
+      <section id="about">
+        <h2>About Me</h2>
+        <p>Hobbyist software developer with a particular interest in Python, Java and blockchain technologies. I love working on projects that push the limits of what's possible whether it's building a backend for Lightning Network payments or creating tools for gaming communities. I'm always exploring new ways to make systems more efficient and innovative, and I enjoy tackling complex challenges.</p>
+      </section>
+      <section id="projects">
+        <h2>Featured Projects</h2>
+        <div class="project">
+          <h3>LNPay-Backend</h3>
+          <p>A simple Python backend to receive BTC through the Lightning Network using Flask and Strike API.</p>
+          <a href="https://github.com/ils94/LNPay-Backend" target="_blank">View on GitHub</a>
+        </div>
+        <div class="project">
+          <h3>Tails OS Bitcoin Cold Wallet</h3>
+          <p>Tutorial: Creating a Bitcoin cold wallet using Tails OS with persistent storage (multilanguage).</p>
+          <a href="https://github.com/ils94/TailsOSBitcoinColdWallet" target="_blank">View on GitHub</a>
+        </div>
+        <div class="project">
+          <h3>LOTRO To Speech</h3>
+          <p>A Python program that adds AI voice-over to Lord of The Rings Online quests using OCR.</p>
+          <a href="https://github.com/ils94/LOTROToSpeech" target="_blank">View on GitHub</a>
+        </div>
+        <div class="project">
+          <h3>LOTRO Chat Translator</h3>
+          <p>A Python program to translate chat in real-time to the desired language for Lord of the Rings Online.</p>
+          <a href="https://github.com/ils94/LOTROChatTranslator" target="_blank">View on GitHub</a>
+        </div>
+        <div class="project">
+          <h3>Personal Trainer</h3>
+          <p>Simple workout app that uses the device's text-to-speech feature to announce the next exercise aloud.</p>
+          <a href="https://github.com/ils94/Personal_Trainer_App" target="_blank">View on GitHub</a>
+        </div>
+      </section>
+      <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+          <li>Programming Languages: Python, Java, JavaScript</li>
+          <li>Frameworks: Flask</li>
+          <li>Technologies: Bitcoin Lightning Network, APIs, I.A</li>
+          <li>Tools: Git, Android Studios, PyCharm, ChatGPT</li>
+          <li>Operational Systems: Linux, Windows, Android</li>
+        </ul>
+      </section>
+      <section id="contact">
+        <h2>Contact</h2>
+        <p>Feel free to reach out if you'd like to collaborate or learn more about my work:</p>
+        <ul>
+          <li>
+            <i class="fas fa-envelope"></i> Email: <a href="mailto:github.sector155@passinbox.com">github.sector155@passinbox.com</a>
+          </li>
+          <li>
+            <i class="fab fa-github"></i> GitHub: <a href="https://github.com/ils94" target="_blank">github.com/ils94</a>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <p>&copy; 2025 ils94. All rights reserved.</p>
+      <p>
+        <a href="https://github.com/ils94?tab=repositories" target="_blank">Visit My GitHub</a>
+      </p>
+    </footer>
+  </body>
 </html>
