--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
           <a href="https://github.com/ils94/LNPay-Backend" target="_blank">View on GitHub</a>
         </div>
         <div class="project">
+          <h3>Encrypt It</h3>
+          <p>A lightweight Android app for secure text encryption and decryption. Using a hybrid RSA/AES scheme, Encrypt It lets you encrypt messages with a contact’s public key, decrypt them with your private key, and manage a contact list, all in a simple, user-friendly interface.</p>
+          <a href="https://github.com/ils94/Encrypt_It" target="_blank">View on GitHub</a>
+        </div>
+        <div class="project">
           <h3>Tails OS Bitcoin Cold Wallet</h3>
           <p>Tutorial: Creating a Bitcoin cold wallet using Tails OS with persistent storage (multilanguage).</p>
           <a href="https://github.com/ils94/TailsOSBitcoinColdWallet" target="_blank">View on GitHub</a>
