--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="project">
           <h3>Encrypt It</h3>
-          <p>A lightweight Android app for secure text encryption and decryption. Using a hybrid RSA/AES scheme, Encrypt It lets you encrypt messages with a contact’s public key, decrypt them with your private key, and manage a contact list, all in a simple, user-friendly interface.</p>
+          <p>A simple Android application for secure text encryption and decryption using a hybrid RSA/AES encryption scheme. Encrypt It allows users to encrypt messages with a contact's public key so they can decrypt it with their private key, ensuring secure communication.</p>
           <a href="https://github.com/ils94/Encrypt_It" target="_blank">View on GitHub</a>
         </div>
         <div class="project">
