--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
           <a href="https://github.com/ils94/Encrypt_It" target="_blank">View on GitHub</a>
         </div>
         <div class="project">
+          <h3>Electrum Companion</h3>
+          <p>Electrum Companion helps you create and share PSBTs and SBTs on Android. Since the Electrum Wallet doesn’t let you save these files, this app steps in to make it easy!</p>
+          <a href="https://github.com/ils94/LNPay-Backend" target="_blank">View on GitHub</a>
+        </div>
+        <div class="project">
           <h3>Tails OS Bitcoin Cold Wallet</h3>
           <p>Tutorial: Creating a Bitcoin cold wallet using Tails OS with persistent storage (multilanguage).</p>
           <a href="https://github.com/ils94/TailsOSBitcoinColdWallet" target="_blank">View on GitHub</a>
